--- a/app/views/comment_books/edit.html.erb
+++ b/app/views/comment_books/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @comment_book %> |
-<%= link_to 'Back', comment_books_path %>
+<%= link_to 'Regresar', comment_books_path %>
