--- a/app/views/comment_books/show.html.erb
+++ b/app/views/comment_books/show.html.erb
@@ -15,5 +15,5 @@
   <%= @comment_book.book_id %>
 </p>
 
-<%= link_to 'Edit', edit_comment_book_path(@comment_book) %> |
-<%= link_to 'Back', comment_books_path %>
+<%= link_to 'Editar', edit_comment_book_path(@comment_book) %> |
+<%= link_to 'Regresar', comment_books_path %>
