--- a/app/views/comment_users/edit.html.erb
+++ b/app/views/comment_users/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @comment_user %> |
-<%= link_to 'Back', comment_users_path %>
+<%= link_to 'Regresar', comment_users_path %>
