--- a/app/views/comment_users/show.html.erb
+++ b/app/views/comment_users/show.html.erb
@@ -11,5 +11,5 @@
   <%= @comment_user.user_id %>
 </p>
 
-<%= link_to 'Edit', edit_comment_user_path(@comment_user) %> |
-<%= link_to 'Back', comment_users_path %>
+<%= link_to 'Editar', edit_comment_user_path(@comment_user) %> |
+<%= link_to 'Regresar', comment_users_path %>
