--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <section id="about-us">
     <div class="container">
-		<div class="center wow fadeInDown">
+	<div class="center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">
+
 			<h2>Hola!</h2>
 			<p class="lead">Busca un nuevo hogar para tu libro y adopta uno para ti.</p>
 		</div>
@@ -34,19 +35,71 @@
 				</a>
 				
 				<a class=" right carousel-control hidden-xs" href="#carousel-slider" data-slide="next">
-					<i class="fa fa-angle-right"></i> 
-				</a>
-			</div> <!--/#carousel-slider-->
+					<i class="fa fa-angle-right"></i>
+				</a><br> 
+			</div><br>  <!--/#carousel-slider-->
 		</div><!--/#about-slider-->
+
+
+
+
+<div class="center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">
+
+		<h2>¿Cómo funciona?</h2>
+			
+		
+		</div>
+		
+
+            <div class="row">
+                <div class="features">
+                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap">
+                            <i><a href="#">1</a></i>
+                            <h2>Regístrate.</h2>
+                            <h3>Cuentanos un poco de tí.</h3>
+                        </div>
+                    </div><!--/.col-md-4-->
+
+                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap">
+                               <i><a href="#">2</a></i>
+                            <h2>Ingresa los libros que quieras intercambiar.</h2>
+                            <h3>Solo necesitas una foto del libro.</h3>
+                        </div>
+                    </div><!--/.col-md-4-->
+
+                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap">
+                                 <i><a href="#">3</a></i>
+                            <h2>Encuentra el libro que estas buscando.</h2>
+                            <h3>Solo debes dejar un comentario en el libro.</h3>
+                        </div>
+                    </div><!--/.col-md-4-->
+                
+                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap">
+                               <i><a href="#">4</a></i>
+                            <h2>Intercambio.</h2>
+                            <h3>Te podras contactar con el dueño del libro y hacer el intercambio.</h3>
+                        </div>
+                    </div><!--/.col-md-4-->
+
+                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap">
+                                  <i><a href="#">5</a></i>
+                            <h2>Empezar a leer.</h2>
+                            <h3>"Cuanto más lees, más cosas sabrás.Cuantas más cosas aprendas, a más lugares viajaras" Dr.Seuss</h3>
+                        </div>
+                    </div><!--/.col-md-4-->
+                </div><!--/.services-->
+            </div><!--/.row-->    
+
 	</div><!--/#container-->
 </section><!--/Section about us-->
 
-				
-					
-
+								
 				      
 
 
-    <script type="text/javascript">
-        $('.carousel').carousel()
-    </script>
+  
