--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -39,9 +39,7 @@
 
                              <%= link_to 'Editar', edit_user_registration_path(@user) %> 
                        
-                       <%=  link_to "upvote", like_user_path(@user), method: :put %>
-                       <%=  link_to "downvote", dislike_user_path(@user), method: :put %>
-                       <%=  @user.score %>
+
 
                                 
       </div>
@@ -63,7 +61,7 @@
                                     <p><%= comment_user.message %> </p>
                                     <div class="entry-meta small muted">
                                         <span>Creado por: <a href="#"><%= comment_user.user_review.name %></a></span>
-                                         <%= link_to 'Destroy', comment_user, method: :delete, data: { confirm: 'Are you sure?' } %>
+                                         <%= link_to 'Eliminar', comment_user, method: :delete, data: { confirm: 'Esta seguro?' } %>
                                     </div>
                                 </div>
                                 
