--- a/app/views/comment_users/index.html.erb
+++ b/app/views/comment_users/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Comment Users</h1>
+<h1>Comentarios de usuarios</h1>
 
 <table>
   <thead>
@@ -17,8 +17,8 @@
         <td><%= comment_user.message %></td>
         <td><%= comment_user.user_id %></td>
         <td><%= link_to 'Show', comment_user %></td>
-        <td><%= link_to 'Edit', edit_comment_user_path(comment_user) %></td>
-        <td><%= link_to 'Destroy', comment_user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Editar', edit_comment_user_path(comment_user) %></td>
+        <td><%= link_to 'Eliminar', comment_user, method: :delete, data: { confirm: 'Estas seguro?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Comment user', new_comment_user_path %>
+<%= link_to 'Nuevo comentario de usuario', new_comment_user_path %>
