--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Olvidaste tú contraseña?</h2>
+<section id="contact-page">
+  <div class="container">
+    <div class="center">        
+     <h2>Olvidaste tú contraseña?</h2>
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :Correo_electronico %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Enviar" %>
+    <%= f.submit "Enviar" ,class: "btn btn-primary btn-lg" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
+</div> 
+</section> 
