--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,21 +38,14 @@
           <div class="col-sm-6 col-xs-8">
             <div class="social">
               <ul class="social-share">
-                <li><a href="https://www.facebook.com/Intercambiosdelibrosmedellin/"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/Intercambiosdelibrosmedellin/ "  target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
                 <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                 <li><a href="#"><i class="fa fa-skype"></i></a></li>
 
               </ul>
-              <div class="search">
-                <form role="form">
-                  <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                  <i class="fa fa-search"></i>
 
-                </form>
-
-               </div>
 
              </div>
             </div>
@@ -69,7 +62,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand " href="home/index.html"><%= image_tag 'logo.jpg', height: 74 %></a>
+          <a class="navbar-brand " href=""><%= image_tag 'logo.jpg', height: 74 %></a>
 
         </div>
     <div class="titulo" >New home book</div>
@@ -92,8 +85,9 @@
                 <%= link_to  profile_path(id: current_user.id )do %>
                   <%=  image_tag current_user.profile_picture, class: "img-responsive img-circle", width:60 , height:30   %>
                 <% end %>
+                <%= link_to('Cerrar sesión', destroy_user_session_path, :method => :delete) %>
                 </div>
-                <div><%= link_to('Cerrar sesión', destroy_user_session_path, :method => :delete) %></div>
+               
                 <% end %>
 </li>
 
