--- a/app/views/users/usuarios.html.erb
+++ b/app/views/users/usuarios.html.erb
@@ -15,7 +15,7 @@
 <%= image_tag user.profile_picture, :class => "img-responsive" ,  width:81 , height:81   %>
 </div>
 <div class="media-body">
-<h3 class="media-heading">Nombres: <%= user.name %></h3>
+<h3 class="media-heading"  >Nombre: <%= user.name %></h3>
 <p>
     <strong>Correo electronico:</strong>
     <%= user.email %>
