--- a/app/views/users/usuarios.html.erb
+++ b/app/views/users/usuarios.html.erb
@@ -3,7 +3,7 @@
  <section id="services" class="service-item">
 <div class="container">
 <div class="center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">
-<h2>Lista de Usuarios</h2>
+<h2>Lista de usuarios</h2>
 <p class="lead">Si quieres comunicarte con alguno de nuestros usuarios, puedes dejar un comentario en su perfil</p>
 </div>
 <div class="row">
